--- a/sample.css
+++ b/sample.css
@@ -25,3 +25,13 @@
  width:800px;
  text-align: center;
 }
+@media screen and(max-width: 480px){
+	img{
+		border: 0;
+	}
+}
+@media screen and(min-width: 1280px){
+	img{
+		border: 1px solid red;
+	}
+}
